--- a/app/src/main/res/layout/fragment_valor_juntas.xml
+++ b/app/src/main/res/layout/fragment_valor_juntas.xml
@@ -39,7 +39,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:text="0" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -52,7 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:text="0"/>
 
             <TextView
                 android:id="@+id/textView3"
@@ -65,7 +67,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:text="0"/>
 
             <Button
                 android:id="@+id/btRealizarMov"
