--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,6 +17,11 @@
         android:title="@string/title_dashboard" />
 
     <item
+        android:id="@+id/navigation_movimentacao"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_movimentacao"/>
+
+    <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
